objects/Routing_Email__c.object
<CustomObject>
    <description>Integration Workstream : R5: R-2678</description>
    <fields>
        <fullName>Business_Unit_Backup__c</fullName>
        <description>Backup field to save existing value from Business_Unit__c field. STS R3.0</description>
        <inlineHelpText>Backup field to save existing value from Business_Unit__c field.</inlineHelpText>
        <label>Business Unit Backup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Integration Workstream : R5 : R-2678</description>
        <label>Business Unit</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>EPCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IACO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IATU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MODR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGHV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGTR</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CaseQueueName__c</fullName>
        <inlineHelpText>Populate with Queue Developer Name in order to have this routing email enabled as filtering option for Case Email Action.</inlineHelpText>
        <label>Case Queue Developer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Name__c</fullName>
        <label>Configuration Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State Of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius And Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Integration Workstream : R5 : R-2678</description>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Group_Backup__c</fullName>
        <label>Product Group Backup</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>Integration Workstream : R5 : R-2678</description>
        <label>Product Group</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>1339</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1723</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1728</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1730</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2106</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2108</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2115</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2127</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2128</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2129</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2132</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2214</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2215</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2222</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2226</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2228</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2401</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2408</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2409</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2413</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2425</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2451</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2480</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2617</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2657</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2699</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2802</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2851</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2861</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Routing_Email_Address__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Integration Workstream : R5 : R-2678</description>
        <externalId>true</externalId>
        <label>Routing Email Address</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <label>Routing Email</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Configuration_Name__c</columns>
        <columns>Routing_Email_Address__c</columns>
        <columns>Division__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RE-{00}</displayFormat>
        <label>Routing Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routing Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>